--- a/app/scss/_allstyle.scss
+++ b/app/scss/_allstyle.scss
@@ -125,15 +125,13 @@
 			}
 			.price-button {
 				padding: 25px 0;
+				text-align: center;
 			}
 			.price-button a {
-				margin: 0 auto;
-				display: block;
+				display: inline-block;
 				border-radius: 5px;
+			    padding: 10px 35px;
 				font-size: 1em;
-				width: 210px;
-				height: 50px;
-				line-height: 50px;
 				background-color: #e8776b;
 				text-align: center;
 				color: #fff;
@@ -526,30 +524,50 @@ opacity: 1; }
 	font-size: 20px;
 	margin: auto;
 text-align: center; }
-	/* overlay at start */
-.mfp-fade.mfp-bg {
-	opacity: 0;
--webkit-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease; }
-	/* overlay animate in */
-.mfp-fade.mfp-bg.mfp-ready {
-	opacity: 0.8; }
-/* overlay animate out */
-.mfp-fade.mfp-bg.mfp-removing {
-	opacity: 0; }
-	/* content at start */
-	.mfp-fade.mfp-wrap .mfp-content {
-opacity: 0;
-left: 100%;
--webkit-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease; }
-/* content animate it */
-.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
-opacity: 1;
-left: 0; }
-	/* content animate out */
-.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
-	opacity: 0;
-	left: 100%; }
+
+/*====== "Hinge" close effect ======*/
+@keyframes hinge {
+  0% {
+    transform: rotate(0);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
+  }
+  20%, 60% {
+    transform: rotate(80deg);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
+  }
+  40% {
+    transform: rotate(60deg);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
+  }
+  80% {
+    transform: rotate(60deg) translateY(0);
+    opacity: 1;
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    transform: translateY(700px);
+    opacity: 0;
+  }
+}
+.hinge {
+  animation-duration: 1s;
+  animation-name: hinge;
+}
+
+.mfp-with-fade .mfp-content, .mfp-with-fade.mfp-bg {
+  opacity: 0;
+  transition: opacity .5s ease-out;
+}
+.mfp-with-fade.mfp-ready .mfp-content {
+  opacity: 1;
+}
+.mfp-with-fade.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+.mfp-with-fade.mfp-removing.mfp-bg {
+  opacity: 0;
+}
